<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:yuyong="http://schemas.android.com/yuyong"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/register_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_large"
            android:textColor="@color/primary_txt"
            android:textStyle="bold"/>

        <ImageView
            yuyong:yuyong_theme_type="src"
            android:id="@+id/register_username_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_username_wrapper"
            android:layout_alignBottom="@+id/register_username_wrapper"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/username_icon"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_username_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_header"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/register_username_icon"
            android:theme="@style/EditTextLabelInverse">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_username"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:hint="@string/username"
                    android:textSize="@dimen/text_medium_large"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textSize="20sp"
                    android:textColor="@color/btn_red" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>


        <ImageView
            yuyong:yuyong_theme_type="src"
            android:id="@+id/register_fname_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_fname_wrapper"
            android:layout_alignBottom="@+id/register_fname_wrapper"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/username_icon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_fname_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_username_wrapper"
            android:layout_toEndOf="@+id/register_fname_icon"
            android:theme="@style/EditTextLabel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_fname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/first_name"
                    android:textSize="@dimen/text_medium_large"
                    android:inputType="textPersonName|textCapWords"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textSize="20sp"
                    android:textColor="@color/btn_red" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <ImageView
            yuyong:yuyong_theme_type="src"
            android:id="@+id/register_lname_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_lname_wrapper"
            android:layout_alignBottom="@+id/register_lname_wrapper"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/username_icon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_lname_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_fname_wrapper"
            android:layout_toEndOf="@+id/register_lname_icon"
            android:theme="@style/EditTextLabel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_lname"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/last_name"
                    android:textSize="@dimen/text_medium_large"
                    android:inputType="textPersonName|textCapWords"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="optional"
                    />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            yuyong:yuyong_theme_type="src"
            android:id="@+id/register_email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_email_wrapper"
            android:layout_alignBottom="@+id/register_email_wrapper"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/mail"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_email_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_lname_wrapper"
            android:layout_toEndOf="@+id/register_email_icon"
            android:theme="@style/EditTextLabel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/email"
                    android:textSize="@dimen/text_medium_large"
                    android:inputType="textEmailAddress"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textSize="20sp"
                    android:textColor="@color/btn_red" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            yuyong:yuyong_theme_type="src"
            android:id="@+id/register_pass_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_pass_wrapper"
            android:layout_alignBottom="@+id/register_pass_wrapper"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/password_icon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_pass_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_email_wrapper"
            android:layout_toEndOf="@+id/register_pass_icon"
            android:theme="@style/EditTextLabel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_pass"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:textSize="@dimen/text_medium_large"
                    android:inputType="textPassword"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textSize="20sp"
                    android:textColor="@color/btn_red" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <ImageView
            yuyong:yuyong_theme_type="src"
            android:id="@+id/register_pass_conf_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/register_pass_conf_wrapper"
            android:layout_alignBottom="@+id/register_pass_conf_wrapper"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/password_icon"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_pass_conf_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_pass_wrapper"
            android:layout_toEndOf="@+id/register_pass_conf_icon"
            android:theme="@style/EditTextLabel">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_pass_conf"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password_conf"
                    android:textSize="@dimen/text_medium_large"
                    android:inputType="textPassword"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textSize="20sp"
                    android:textColor="@color/btn_red" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/register_pass_req"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_pass_conf_wrapper"
            android:text="@string/register_password_requirements"
            android:textSize="@dimen/text_small"
            android:textColor="@color/primary_txt_inverse"/>

        <Button
            yuyong:yuyong_theme_type="background_color"
            android:id="@+id/register_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_pass_req"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/secondary_txt_inverse"
            android:background="@color/btn_primary"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:onClick="onAcceptClicked"/>

        <TextView
            android:id="@+id/register_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/register_accept"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/have_an_account"
            android:textColor="@color/primary_txt_inverse"
            android:textSize="@dimen/text_medium"
            android:onClick="onHaveAccountClicked"/>
    </RelativeLayout>
</ScrollView>